--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "savks/e-filters",
     "license": "proprietary",
     "require": {
-        "savks/e-search": "dev-master"
+        "php": "^8.1",
+        "savks/e-search": "^1.0"
     },
     "autoload": {
         "psr-4": {
