--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "savks/e-filters",
-    "license": "proprietary",
+    "license": "MIT",
     "require": {
         "php": "^8.1",
         "savks/e-search": "^1.0"
